# nyxio

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
lavalink/: application.yml
src/nyxio/: __init__.py  __main__.py  bot.py  config.py
src/nyxio/cogs/: admin.py  music.py  settings.py
src/nyxio/core/: guild_config.py  manager.py  player.py  queue.py  restore.py  track.py
src/nyxio/infra/: logging.py  state_store.py  supervisor.py
src/nyxio/ui/: controls.py  embeds.py
src/nyxio/utils/: errors.py  filters.py  formatting.py  permissions.py  progressbar.py  query.py
tests/: conftest.py  test_config.py  test_embeds.py  test_filters.py  test_guild_config.py  test_manager.py  test_player_fsm.py  test_progressbar.py  test_query.py  test_queue.py  test_restore.py
