[project]
name = "nyxio"
version = "0.1.0"
description = "Nyxio — nowoczesny bot muzyczny dla Discorda (YouTube, kolejki, interaktywny UI)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Audio przez Lavalink (wavelink jako klient). Bot nie transkoduje.
    "discord.py>=2.7",
    "wavelink>=3,<4",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
nyxio = "nyxio.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nyxio"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
